--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
@@ -1,13 +1,12 @@
 <nav class="navbar-top">
   <div class="nav-wrapper">
-    <a href="http://html.nkdev.info/_con/ui-buttons.html#" class="yay-toggle">
+    <a href="http://html.nkdev.info/_con/ui-buttons.html#" class="yay-toggle" style="width: 58px">
       <div class="burg1"></div>
       <div class="burg2"></div>
       <div class="burg3"></div>
     </a>
-    <a href="http://html.nkdev.info/_con/index.html" class="brand-logo">
-      <div style="margin-top: -17px"> LOGO</div>
-      <!--<img src="" alt="LOGO">-->
+    <a href="http://html.nkdev.info/_con/index.html" class="brand-logo" style="padding-left: 0px;">
+      <img src="{{ asset('bundles/common/images/logo-left.png') }}" alt="LOGO">
     </a>
     <ul>
       <li>
