--- a/src/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/UserBundle/Resources/views/Profile/index.html.twig
@@ -168,26 +168,26 @@
 					<div class="card-image card-image-profile">
 						<img src="{{ asset('bundles/dashboard/people/01.jpg') }}">
 					</div>
-					<div class="card-action">
-						<div class="pmo-block pmo-contact hidden-xs">
-							<h2>Contact</h2>
+					{#<div class="card-action">#}
+						{#<div class="pmo-block pmo-contact hidden-xs">#}
+							{#<h2>Contact</h2>#}
 
-							<ul>
-								<li><i class="mdi mdi-communication-phone"></i> 00971 12345678 9</li>
-								<li><i class="mdi mdi-communication-email"></i> malinda-h@gmail.com</li>
-								<li><i class="fa fa-facebook-official"></i> malinda.hollaway</li>
-								<li><i class="fa fa-twitter"></i> @malinda (twitter.com/malinda)</li>
-								<li>
-									<i class="mdi mdi-communication-location-on"></i>
-									<address class="m-b-0 ng-binding">
-										44-46 Morningside Road,<br>
-										Edinburgh,<br>
-										Scotland
-									</address>
-								</li>
-							</ul>
-						</div>
-					</div>
+							{#<ul>#}
+								{#<li><i class="mdi mdi-communication-phone"></i> 00971 12345678 9</li>#}
+								{#<li><i class="mdi mdi-communication-email"></i> malinda-h@gmail.com</li>#}
+								{#<li><i class="fa fa-facebook-official"></i> malinda.hollaway</li>#}
+								{#<li><i class="fa fa-twitter"></i> @malinda (twitter.com/malinda)</li>#}
+								{#<li>#}
+									{#<i class="mdi mdi-communication-location-on"></i>#}
+									{#<address class="m-b-0 ng-binding">#}
+										{#44-46 Morningside Road,<br>#}
+										{#Edinburgh,<br>#}
+										{#Scotland#}
+									{#</address>#}
+								{#</li>#}
+							{#</ul>#}
+						{#</div>#}
+					{#</div>#}
 				</div>
 			</div>
 			<div class="col m9" style="border-left: 1px solid #eee;background-color: #FFFFFF;min-height: 570px;border-bottom: 1px solid #eee;">
