--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-profile-info.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-profile-info.html.twig
@@ -20,66 +20,57 @@
 
     <div class="row" style="margin-top: 0px;">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>First Name:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	Livan</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"> <span>{{ profile.firstName ? profile.firstName : 'Empty' }}</span></div>
     </div>
     <div class="row" style="margin-top: 0px;">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Last Name:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	Frometa</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"> <span>{{ profile.lastName ? profile.lastName : 'Empty' }}</span></div>
     </div>
     <div class="row">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Gender:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	Male</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"> <span>{{ profile.gender ? profile.gender : 'Empty' }}</span></div>
     </div>
     <div class="row">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Birthday:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	June 23, 1990</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"> <span>{{ profile.birthDate ? profile.birthDate | date('M, d Y') : 'Empty' }}</span></div>
     </div>
 
     <div class="row" style="margin-top: 0px;">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Mobile Phone:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	00971 12345678 9</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"> <span>{{ profile.cellPhone ? profile.cellPhone : '-' }}</span></div>
     </div>
     <div class="row" style="margin-top: 0px;">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Office Phone:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	00971 12345678 9</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"><span>{{ profile.officePhone ? profile.officePhone : '-' }}</span></div>
     </div>
     <div class="row">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Email Address:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	malinda.h@gmail.com</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"> <span>{{ profile.email ? profile.email : '-' }}</span></div>
     </div>
     <div class="row">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Company:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	DWELL Real Estate</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"><span> {{ profile.company ? profile.company : '-' }}</span></div>
     </div>
     <div class="row">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Address:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	1028 SW 66 AVE</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"> <span>{{ profile.address ? profile.address : '-' }}</span></div>
     </div>
     <div class="row">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>City:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	Miami</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"><span>{{ profile.city ? profile.city : '-' }}</span></div>
     </div>
     <div class="row">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>State:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	Florida</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"><span>{{ profile.state ? profile.state : '-' }}</span></div>
     </div>
     <div class="row">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Country:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	United States</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"><span>{{ profile.country ? profile.country : '-' }}</span></div>
     </div>
     <div class="row">
       <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Website:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	http://sample.com</span></div>
+      <div class="col s9" style="padding-bottom: 10px;"> <span>{{ profile.website ? profile.website : '-' }}</span></div>
     </div>
-    <div class="row">
-      <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Twitter:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	@malinda</span></div>
-    </div>
-    <div class="row">
-      <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><strong><b>Skype:</b> </strong></span></div>
-      <div class="col s9" style="padding-bottom: 10px;"> <span>	malinda.hollaway</span></div>
-    </div>
-
   </div>
 
   <div id="edit-profile-container" style="display: none;">
@@ -88,14 +79,14 @@
       <div class="row" style="margin-top: 0rem;">
         <div class="col m6" style="padding-bottom: 0px;">
           <div class="input-field align-left">
-            {{ form_widget(profile_form.first_name, {'attr': {'id': 'first_name','class':'validate'}}) }}
-            <label for="first_name" class="">First Name</label>
+            {{ form_widget(profile_form.first_name, {'attr': {'class':'validate'}}) }}
+            <label for="profile_first_name" class="">First Name</label>
           </div>
         </div>
         <div class="col m6" style="padding-bottom: 0px;">
           <div class="input-field align-left">
-            {{ form_widget(profile_form.address, {'attr': {'id': 'address','class':'validate'}}) }}
-            <label for="address" class="">Address</label>
+            {{ form_widget(profile_form.address, {'attr': {'class':'validate'}}) }}
+            <label for="profile_address" class="">Address</label>
           </div>
         </div>
       </div>
@@ -103,29 +94,14 @@
       <div class="row" style="margin-top: 0rem;">
         <div class="col m6" style="padding-bottom: 0px;">
           <div class="input-field align-left">
-            {{ form_widget(profile_form.last_name, {'attr': {'id': 'last_name','class':'validate'}}) }}
-            <label for="last_name" class="">Last Name</label>
+            {{ form_widget(profile_form.last_name, {'attr': {'class':'validate'}}) }}
+            <label for="profile_last_name" class="">Last Name</label>
           </div>
         </div>
         <div class="col m6" style="padding-bottom: 0px;">
           <div class="input-field align-left">
-            {{ form_widget(profile_form.city, {'attr': {'id': 'city','class':'validate'}}) }}
-            <label for="city" class="">City</label>
-          </div>
-        </div>
-      </div>
-
-      <div class="row" style="margin-top: 0rem;">
-        <div class="col m6" style="padding-bottom: 0px;">
-          <div class="input-field">
-            {{ form_widget(profile_form.email, {'attr': {'id': 'email','type':'email','class':'validate'}}) }}
-            <label for="email" class="">Email</label>
-          </div>
-        </div>
-        <div class="col m6" style="padding-bottom: 0px;">
-          <div class="input-field align-left">
-            {{ form_widget(profile_form.state, {'attr': {'id': 'state','class':'validate'}}) }}
-            <label for="state" class="">State</label>
+            {{ form_widget(profile_form.city, {'attr': {'class':'validate'}}) }}
+            <label for="profile_city" class="">City</label>
           </div>
         </div>
       </div>
@@ -133,14 +109,29 @@
       <div class="row" style="margin-top: 0rem;">
         <div class="col m6" style="padding-bottom: 0px;">
           <div class="input-field">
-            {{ form_widget(profile_form.gender, {'attr': {'id': 'gender'}}) }}
+            {{ form_widget(profile_form.email, {'attr': {'type':'email','class':'validate'}}) }}
+            <label for="profile_email" class="">Email</label>
+          </div>
+        </div>
+        <div class="col m6" style="padding-bottom: 0px;">
+          <div class="input-field align-left">
+            {{ form_widget(profile_form.state, {'attr': {'class':'validate'}}) }}
+            <label for="profile_state" class="">State</label>
+          </div>
+        </div>
+      </div>
+
+      <div class="row" style="margin-top: 0rem;">
+        <div class="col m6" style="padding-bottom: 0px;">
+          <div class="input-field">
+            {{ form_widget(profile_form.gender) }}
             <label for="profile_gender" style="transform: translateY(-170%);left: 0px;font-size: .8rem;">Gender</label>
           </div>
         </div>
         <div class="col m6" style="padding-bottom: 0px;">
           <div class="input-field align-left">
-            {{ form_widget(profile_form.country, {'attr': {'id': 'country','class':'validate'}}) }}
-            <label for="state" class="">Country</label>
+            {{ form_widget(profile_form.country, {'attr': {'class':'validate'}}) }}
+            <label for="profile_country" class="">Country</label>
           </div>
         </div>
       </div>
@@ -148,14 +139,14 @@
       <div class="row" style="margin-top: 0rem;">
         <div class="col m6" style="padding-bottom: 0px;">
           <div class="input-field">
-            {{ form_widget(profile_form.cell_phone, {'attr': {'id': 'cell_phone','class':'validate','data-inputmask':"'mask': '(999) 999-9999'"}}) }}
-            <label for="cell_phone" style="transform: translateY(-170%);left: 0px;">Cell Phone</label>
+            {{ form_widget(profile_form.cell_phone, {'attr': {'class':'validate','data-inputmask':"'mask': '(999) 999-9999'"}}) }}
+            <label for="profile_cell_phone" style="transform: translateY(-170%);left: 0px;">Cell Phone</label>
           </div>
         </div>
         <div class="col m6" style="padding-bottom: 0px;">
           <div class="input-field">
-            {{ form_widget(profile_form.office_phone, {'attr': {'id': 'office_phone','class':'validate','data-inputmask':"'mask': '(999) 999-9999'"}}) }}
-            <label for="office_phone" style="transform: translateY(-170%);left: 0px;">Office Phone</label>
+            {{ form_widget(profile_form.office_phone, {'attr': {'class':'validate','data-inputmask':"'mask': '(999) 999-9999'"}}) }}
+            <label for="profile_office_phone" style="transform: translateY(-170%);left: 0px;">Office Phone</label>
           </div>
         </div>
       </div>
@@ -163,14 +154,14 @@
       <div class="row" style="margin-top: 0rem;">
         <div class="col m6" style="padding-bottom: 0px;">
           <div class="input-field align-left">
-            {{ form_widget(profile_form.company, {'attr': {'id': 'company','class':'validate'}}) }}
-            <label for="input_text_licence">Company</label>
+            {{ form_widget(profile_form.company, {'attr': {'class':'validate'}}) }}
+            <label for="profile_company">Company</label>
           </div>
         </div>
         <div class="col m6" style="padding-bottom: 0px;">
           <div class="input-field align-left">
-            {{ form_widget(profile_form.website, {'attr': {'id': 'website','class':'validate'}}) }}
-            <label for="input_text_state">Website</label>
+            {{ form_widget(profile_form.website, {'attr': {'class':'validate'}}) }}
+            <label for="profile_website">Website</label>
           </div>
         </div>
       </div>
@@ -178,7 +169,7 @@
       <div class="row" style="margin-top: 0rem;">
         <div class="col m6" style="padding-bottom: 0px;">
           <div class="input-field align-left">
-            {{ form_widget(profile_form.birth_date, {'attr': {'id': 'birth_date'}}) }}
+            {{ form_widget(profile_form.birth_date) }}
             <label for="profile_birth_date">Birth date</label>
           </div>
         </div>
