--- a/src/DashboardBundle/Resources/views/Properties/indexAjax.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/indexAjax.html.twig
@@ -1,1 +1,1 @@
-{{ grid(grid, 'DashboardBundle:Grid:gridTemplateAjax.html.twig') }}
+{{ grid(grid, 'DashboardBundle:Grid:gridTemplatePropertiesAjax.html.twig') }}
