Refactoring templete property

--- a/src/DashboardBundle/Resources/views/Grid/gridTemplateProperties.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplateProperties.html.twig
@@ -124,16 +124,16 @@
                     <div class="slider" >
                       <ul class="slides">
                         <li>
-                          <img src="{{ asset('bundles/dashboard/properties/1.jpg') }}">
+                          <img class="activator" src="{{ asset('bundles/dashboard/properties/1.jpg') }}">
                         </li>
                         <li>
-                          <img src="{{ asset('bundles/dashboard/properties/2.jpg') }}">
+                          <img class="activator" src="{{ asset('bundles/dashboard/properties/2.jpg') }}">
                         </li>
                         <li>
-                          <img src="{{ asset('bundles/dashboard/properties/3.jpg') }}">
+                          <img class="activator" src="{{ asset('bundles/dashboard/properties/3.jpg') }}">
                         </li>
                         <li>
-                          <img src="{{ asset('bundles/dashboard/properties/4.jpg') }}">
+                          <img class="activator" src="{{ asset('bundles/dashboard/properties/4.jpg') }}">
                         </li>
                       </ul>
                     </div>
@@ -157,8 +157,13 @@
                     <a href="#!" class="" style="margin-right: 4rem;color: #424242;font-size: 22px;font-weight: normal; opacity: .85;">4</a>
                     <a href="#!" class="" style="margin-right: 4rem;color: #424242;font-size: 22px;font-weight: normal; opacity: .85;">1</a>
                   </div>
+                  <div class="card-action card-action-templeate" style="font-size: 10px;">
+                    <a href="#!" class="blue-text" style="margin-right: 0.3rem;color: #9E9E9E!important"><i class="mdi-communication-location-on"></i></a>
+                    <a href="#!" class="blue-text" style="margin-right: 0rem;color: #9E9E9E!important;">Miami Beach, Florida, Estados Unidos</a>
+                  </div>
                   <div class="card-action card-action-templeate">
-                    <a href="#!" class="blue-text">$12.000</a>
+                    <a href="#!" class="blue-text" style="margin-right: 3rem;font-size: 15px">
+                      <i class="mdi-editor-attach-money" style="font-size: 20px;margin-top: 2px;position: absolute;left: 6px;top: 378px;"></i>12.000</a>
                     <a href="#!" class="blue-text right">VIEW DETAIL</a>
                   </div>
                   <div class="card-reveal">
