--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
@@ -8,7 +8,7 @@
       <div class="content">
         <div class="row">
           <div class="col m12">
-            <input name="file" type="file" class="cloudinary-fileupload" data-cloudinary-field="image_upload">
+            <input name="file" type="file" multiple class="cloudinary-fileupload" data-cloudinary-field="image_upload">
           </div>
         </div>
         <div class="row">
