card image gallery

--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-gallery.html.twig
@@ -11,6 +11,23 @@
             <input name="file" type="file" multiple class="cloudinary-fileupload" data-cloudinary-field="image_upload">
           </div>
         </div>
+
+        <div class="row">
+          <div class="col m3">
+            <div class="card small">
+              <div class="card-image">
+                <img src="{{ asset('bundles/dashboard/properties/4.jpg') }}">
+              </div>
+              <div class="content" style="padding: 0px;">
+              </div>
+              <div class="progress" style="height: 3px;margin-top: 0px;margin-bottom: 0px;">
+                <div class="indeterminate"></div>
+              </div>
+              <div class="card-action" style="padding-top: 5px;"><a href="#!" class="blue-text right" style="margin-right: 0px;">ELIMINAR</a></div>
+            </div>
+          </div>
+        </div>
+
         <div class="row">
           <div class="col m12">
             <div class="row photoswipe-gallery isotope mt-0" data-pswp-uid="1">
